--- a/TableView/Base.lproj/Main.storyboard
+++ b/TableView/Base.lproj/Main.storyboard
@@ -16,29 +16,43 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="iqw-go-Z7X">
+                            <tableView clipsSubviews="YES" contentMode="scaleAspectFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="iqw-go-Z7X">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="146" id="qWo-rf-Kga" customClass="TableViewCell" customModule="TableView" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="146"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="150" id="qWo-rf-Kga" customClass="TableViewCell" customModule="TableView" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qWo-rf-Kga" id="kEt-gD-K9i">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="146"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BLc-aW-pJk">
-                                                    <rect key="frame" x="233" y="47" width="127" height="51"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b8Y-ss-121">
+                                                    <rect key="frame" x="30" y="21" width="154" height="108"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="154" id="727-ri-Lwy"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BLc-aW-pJk">
+                                                    <rect key="frame" x="196" y="21" width="208" height="108"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b8Y-ss-121">
-                                                    <rect key="frame" x="28" y="19" width="154" height="107"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="BLc-aW-pJk" secondAttribute="trailing" constant="12" id="5SK-ZE-ccl"/>
+                                                <constraint firstItem="b8Y-ss-121" firstAttribute="leading" secondItem="kEt-gD-K9i" secondAttribute="leadingMargin" constant="10" id="Ath-mT-bfH"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="b8Y-ss-121" secondAttribute="bottom" constant="10" id="Euc-Fd-SGy"/>
+                                                <constraint firstItem="BLc-aW-pJk" firstAttribute="leading" secondItem="b8Y-ss-121" secondAttribute="trailing" constant="12" id="Fum-sh-vEh"/>
+                                                <constraint firstItem="BLc-aW-pJk" firstAttribute="top" secondItem="kEt-gD-K9i" secondAttribute="topMargin" constant="10" id="KLb-86-jTB"/>
+                                                <constraint firstItem="BLc-aW-pJk" firstAttribute="leading" secondItem="b8Y-ss-121" secondAttribute="trailing" constant="12" id="QtZ-TY-WVc"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="BLc-aW-pJk" secondAttribute="bottom" constant="10" id="Ren-0p-RH2"/>
+                                                <constraint firstItem="b8Y-ss-121" firstAttribute="top" secondItem="kEt-gD-K9i" secondAttribute="topMargin" constant="10" id="ceZ-BM-FUx"/>
+                                                <constraint firstItem="BLc-aW-pJk" firstAttribute="leading" secondItem="b8Y-ss-121" secondAttribute="trailing" constant="10" id="enQ-HZ-FeR"/>
+                                                <constraint firstItem="BLc-aW-pJk" firstAttribute="leading" secondItem="b8Y-ss-121" secondAttribute="trailing" constant="12" id="rNl-0v-bKC"/>
+                                                <constraint firstItem="BLc-aW-pJk" firstAttribute="trailing" secondItem="kEt-gD-K9i" secondAttribute="trailingMargin" constant="10" id="sez-xb-OFK"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="ImageView" destination="b8Y-ss-121" id="aEp-9r-EC5"/>
